Add initial project structure and enhance RAG functionality
- Created .project-root and README.md files for project setup.
- Added Dockerfile for containerization of the Python Flask API.
- Updated requirements.txt to include 'rootutils' for additional functionality.
- Modified RAGPipeline to accept a text path for improved document retrieval.
- Implemented FaissIndexer with methods for building and loading the index.
- Introduced Chunker class for efficient text chunking.
- Added a sample text file for testing RAG functionality.
- Updated test notebook to reflect changes in API interaction.

--- a/notebooks/test_api.ipynb
+++ b/notebooks/test_api.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'answer': 'RAG (Relatórios de Atividade Geral) é um conceito importante na Inteligência Artificial (IA), especialmente na área de processamento de linguagem natural (NLP) e machine learning.\\n\\nEm resumo, RAG são relatórios que fornecem informações sobre a atividade geral do modelo de aprendizado automático, ajudando os desenvolvedores a entender melhor como o modelo está se comportando e qualificá-lo para uso em aplicações reais.\\n\\nOs RAG podem incluir informações como:\\n\\n1. **Taxa de erro**: A proporção de casos corretamente classificados pelo modelo.\\n2. **Precisão**: A proporção de casos que o modelo correctamente classificou como positivos (se for um modelo de aprendizado supervisionado).\\n3. **F1-score** (ou F-measure): A média aritmética da precisão e da taxa de recuperação do modelo.\\n4. **Acurácia**: A proporção de casos que o modelo correctamente classificou em relação ao total de casos testados.\\n5. **Loss function value**: O valor da função de perda do modelo, que indica quão bem o modelo está se ajustando ao treinamento.\\n6. **Training time**: O tempo gasto pelo modelo para ser treinado.\\n7. **Validation score**: A performance do modelo durante o processo de validação (ou test drive).\\n8. **Hyperparameter tuning results**: Os resultados da otimização dos parâmetros hiper do modelo.\\n\\nOs RAG são essenciais porque permitem que os desenvolvedores:\\n\\n1. Avaliem a performance do modelo e identifiquem áreas para melhoria.\\n2. Comparar diferentes modelos e escolher o melhor para uma aplicação específica.\\n3. Monitorar a evolução da performance do modelo ao longo do tempo, permitindo ajustes e otimizações subsequentes.\\n\\nAlém disso, os RAG podem ajudar a identificar problemas de desempenho, como:\\n\\n1. Bias: O modelo está se comportando de maneira discriminatória ou tendenciosa.\\n2. Overfitting: O modelo está se ajustando demasiado bem aos dados de treinamento e não é capaz de generalizar bem para novos casos.\\n\\nEm resumo, os RAG são uma ferramenta valiosa para avaliar a performance e otimizar o desempenho dos modelos de aprendizado automático em IA.'}\n"
+      "{'answer': 'RAG (Recurrent Autoencoder with Generative Adversarial Networks) é um modelo de aprendizado profundo que combina técnicas de autoencoderação e rede neural adversarial para realizar aprendizado não supervisado em dados complexos.\\n\\nA parte fundamental do modelo RAG é a autoencoderação, que consiste em uma rede neural que codifica os dados de entrada em um espaço latente (dimensionalidade baixa) e posteriormente decodifica esse espaço latente para produzir uma representação reconstruída dos dados originais. A perda da autoencoderação é minimizada durante o treinamento, o que permite ao modelo aprender a capturar as características mais importantes dos dados.\\n\\nA parte secundária do modelo RAG é a rede neural adversarial, que tem como objetivo perturbar a distribuição de dados gerada pela autoencoderação. A rede adversarial tenta produzir exemplos falsos (fake) que sejam semelhantes aos dados reais, enquanto a autoencoderação tenta reconstruir os dados originais. Esse conflito entre as duas redes ajuda a melhorar a qualidade da representação gerada pela autoencoderação.\\n\\nDurante o treinamento do modelo RAG, a perda da rede adversarial é minimizada, o que força a autoencoderação a se tornar cada vez mais precisa e robusta. Isso permite ao modelo aprender a capturar as características mais importantes dos dados de uma forma mais eficaz.\\n\\nAlguns benefícios do modelo RAG incluem:\\n\\n1. Aprendizado não supervisado: O modelo RAG pode aprender a partir de grandes conjuntos de dados sem rótulos, o que é útil quando não há dados rotulados disponíveis.\\n2. Representação compacta: A autoencoderação permite ao modelo capturar as características mais importantes dos dados em um espaço latente dimensionalmente baixo, o que facilita a análise e visualização dos resultados.\\n3. Robustez: A rede adversarial ajuda a melhorar a robustez do modelo à presença de ruído ou outliers nos dados.\\n\\nO modelo RAG tem várias aplicações em áreas como:\\n\\n1. Visão computacional: O modelo pode ser usado para aprender características visuais não supervisionadas, como por exemplo, classificar imagens sem usar rotulos.\\n2. Análise de texto: O modelo pode ser utilizado para aprender representações de textos não supervisionadas, o que é útil em tarefas como sentiment analysis e topic modeling.\\n3. Aprendizado automático: O modelo RAG pode ser usado para aprender a partir de dados complexos e gerar novas informações a partir dos dados de entrada.\\n\\nEm resumo, o modelo RAG é um modelo de aprendizado profundo que combina técnicas de autoencoderação e rede neural adversarial para realizar aprendizado não supervisado em dados complexos.'}\n"
      ]
     }
    ],
@@ -18,6 +18,30 @@
     "import requests\n",
     "\n",
     "url = \"http://127.0.0.1:8000/ask_ollama3\"\n",
+    "prompt = {\"prompt\": \"Explique o que é RAG em IA\"}\n",
+    "\n",
+    "response = requests.post(url, json=prompt)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f8d1c014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'answer': 'Uma pergunta perfeita para um assistente especializado como eu!\\n\\nRAG (Retrieval-Augmented Generation) é uma técnica de Intelligença Artificial (IA) que combina modelos de recuperação de informação com modelos de geração de linguagem. Essa abordagem permite que um modelo de linguagem consulte documentos externos para melhorar a precisão das respostas.\\n\\nNa prática, o RAG trabalha da seguinte maneira: quando um modelo é solicitado a gerar uma resposta, ele primeiro consulta uma base de dados externa (ou seja, um banco de dados) para recuperar informações relevantes sobre o tópico ou questão em questão. Essas informações são então usadas para gerar uma resposta mais precisa e contextualizada.\\n\\nA combinação dos modelos de recuperação de informação com os modelos de geração de linguagem é fundamental para o sucesso do RAG. Isso permite que o modelo combine a sua habilidade natural de entender linguagem humana com a capacidade de buscar informações relevantes em um banco de dados, tornando as respostas mais precisas e confiáveis.\\n\\nA biblioteca FAISS (Facebook AI Similarity Search) é frequentemente usada para armazenar embeddings (ou vetores numéricos) que representam textos e realizar consultas rápidas. Isso permite que os modelos de recuperação de informação busquem rapidamente informações relevantes em um banco de dados.\\n\\nO RAG tem aplicações práticas em vários domínios, incluindo o jurídico, médico e científico, onde a precisão das informações é fundamental. Além disso, essa abordagem pode ser aplicada a outras áreas, como a geração de conteúdo personalizado ou a resolução de problemas complexos.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"http://127.0.0.1:8000/ask_with_rag\"\n",
     "prompt = {\"prompt\": \"Explique o que é RAG em IA\"}\n",
     "\n",
     "response = requests.post(url, json=prompt)\n",
